StructureWrapper - implement keyed